# IDA_star_vs_Dijkstra

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
Dokumentaatio/: kayttoohje.md  maarittely.md  testaus.md  toteutus.md
Project/: .coveragerc  pyproject.toml
Project/src/: Dijkstra.py  IDA_star.py  graphGen.py  heap.py  index.py
Project/src/UI/: ui.py
Project/src/Util/: graphGen.py
Project/src/tests/: Dijkstra_test.py  IDA_star_test.py  heap_test.py
Project/src/util/: analysis.py  graphGen.py  heap.py
Viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md
